--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "homepage": "https://github.com/ArvidAnderson/Electron-CryptoPrices#readme",
   "dependencies": {
+    "ajv": "^7.1.1",
     "coingecko-api": "^1.0.10",
     "crypto-price": "0.0.6",
     "custom-electron-titlebar": "^3.2.6",
     "electron": "^12.0.0",
-    "electron-reload": "^1.5.0"
+    "electron-reload": "^1.5.0",
+    "electron-store": "^7.0.2",
+    "nedb-promises": "^4.1.1"
   }
 }
