--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron .",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . glanzeatcrypto --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"GlanceAtCrypto\"",    
+    "package-win": "electron-packager . glanzeatcrypto --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"GlanceAtCrypto\"",
     "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "repository": {
@@ -22,7 +22,9 @@
   "dependencies": {
     "crypto-price": "0.0.6",
     "custom-electron-titlebar": "^3.2.6",
-    "electron-store": "^7.0.2"
+    "electron-store": "^7.0.2",
+    "jquery": "^3.6.0",
+    "select2": "^4.1.0-rc.0"
   },
   "devDependencies": {
     "electron": "^12.0.0",
