--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ArvidAnderson/Glanze-At-Crypto#readme",
   "dependencies": {
+    "coingecko-api": "^1.0.10",
     "crypto-price": "0.0.6",
     "custom-electron-titlebar": "^3.2.6",
     "electron-store": "^7.0.2",
