--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "custom-electron-titlebar": "^3.2.6",
     "electron-store": "^7.0.2",
     "jquery": "^3.6.0",
-    "select2": "^4.1.0-rc.0"
+    "select2": "^4.1.0-rc.0",
+    "sortablejs": "^1.13.0"
   },
   "devDependencies": {
     "electron": "^12.0.0",
