--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-price": "0.0.6",
     "custom-electron-titlebar": "^3.2.6",
     "electron-store": "^7.0.2",
+    "html5sortable": "^0.11.1",
     "jquery": "^3.6.0",
     "select2": "^4.1.0-rc.0",
     "sortablejs": "^1.13.0"
